Overall changes in SEO

--- a/IT Eng Team/5ways_cicd.html
+++ b/IT Eng Team/5ways_cicd.html
@@ -13,36 +13,41 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+   <!-- Meta Description -->
+<meta name="description" content="Discover how Devozy.ai streamlines CI/CD for Qlik and Talend with one-click deployments, smart builds, and seamless Jenkins/Nexus integrations.">
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!-- Author -->
+<meta name="author" content="Devozy.ai">
+
+<!-- Twitter Card Meta -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@DevozyAI">
+<meta name="twitter:creator" content="@DevozyAI">
+<meta name="twitter:title" content="5 Ways Devozy.ai Simplifies Qlik and Talend CI/CD">
+<meta name="twitter:description" content="Boost DevOps productivity with one-click deployments, smart automation, and seamless Talend-Qlik integration.">
+<meta name="twitter:image" content="https://devozy.ai/assets/social/share-talend-qlik-ci.jpg"> <!-- Replace with actual image -->
+
+<!-- Facebook OG Meta -->
+<meta property="og:title" content="5 Ways Devozy.ai Simplifies Qlik and Talend CI/CD">
+<meta property="og:description" content="Explore how Devozy.ai makes Talend and Qlik CI/CD fast, reliable, and error-free. Automate builds, track deployments, and save engineering hours.">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://devozy.ai/IT%20Eng%20Team/5ways_cicd.html"> <!-- Replace with actual page URL -->
+<meta property="og:image" content="https://devozy.ai/assets/social/share-talend-qlik-ci.jpg"> <!-- Replace with actual image -->
+<meta property="og:image:secure_url" content="https://devozy.ai/assets/social/share-talend-qlik-ci.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
     <!--meta-->
-    <meta name="description"
+    <!-- <meta name="description"
         content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
-    <meta name="author" content="devozy">
+    <meta name="author" content="devozy"> -->
 
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>5ways - devozy</title>
+    <title>5 Ways Devozy.ai Simplifies Qlik and Talend CI/CD | DevOps Automation</title>
+
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
