--- a/IT Eng Team/Key_diff_dev&idp.html
+++ b/IT Eng Team/Key_diff_dev&idp.html
@@ -12,37 +12,41 @@
     <!--required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Required Meta Tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+<!-- Primary Meta -->
+<meta name="title" content="Key Differences Between Devozy.ai and Other IDPs">
+<meta name="description" content="Explore how Devozy.ai outperforms traditional IDPs with integrated DevSecOps, multi-cloud management, cost optimization, and zero-downtime deployments.">
+<meta name="author" content="Devozy.ai">
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://devozy.ai/IT%20Eng%20Team/Key_diff_dev&idp.html">
+<meta property="og:title" content="Key Differences Between Devozy.ai and Other IDPs">
+<meta property="og:description" content="See why Devozy.ai is a game-changer in the IDP space. From integrated DevSecOps to advanced cloud cost optimization, discover the differences that matter.">
+<meta property="og:image" content="https://devozy.ai/assets/img/social/key-diff-banner.jpg">
+<meta property="og:image:secure_url" content="https://devozy.ai/assets/img/social/key-diff-banner.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
-    <!--meta-->
-    <meta name="description"
-        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
-    <meta name="author" content="devozy">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@yozytechnologi1">
+<meta name="twitter:creator" content="@yozytechnologi1">
+<meta name="twitter:title" content="Key Differences Between Devozy.ai and Other IDPs">
+<meta name="twitter:description" content="Devozy.ai offers a unified platform with DevSecOps, CI/CD, multi-cloud integration, and ITSM support—beyond traditional IDPs.">
+<meta name="twitter:image" content="https://devozy.ai/assets/img/social/key-diff-banner.jpg">
+
+      <meta name="author" content="devozy">
 
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Key Differences</title>
+    <title>Key Differences Between Devozy.ai and Other IDPs</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
