--- a/IT Eng Team/agile-kanban.html
+++ b/IT Eng Team/agile-kanban.html
@@ -13,29 +13,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+  <!--twitter og-->
+<meta name="twitter:site" content="@DevozyAI">
+<meta name="twitter:creator" content="@DevozyAI">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Agile Kanban Board | Devozy.ai">
+<meta name="twitter:description" content="Manage IT projects efficiently with Devozy.ai’s Agile Kanban Board. Streamline sprint planning, track progress, and replace tools like Jira and Asana.">
+<meta name="twitter:image" content="#">
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!--facebook og-->
+<meta property="og:url" content="#">
+<meta property="og:title" content="Agile Kanban Board | Devozy.ai">
+<meta property="og:description" content="Devozy.ai’s Agile Project Management board empowers teams with drag & drop Kanban, sprint tracking, real-time collaboration, and DevSecOps integration.">
+<meta property="og:image" content="#">
+<meta property="og:image:secure_url" content="#">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
-    <!--meta-->
-    <meta name="description"
-        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
+<!--meta-->
+<meta name="description" content="Devozy.ai's Agile Kanban tool offers an intuitive drag-and-drop board, sprint insights, and deep DevSecOps integrations for modern IT project delivery.">
+
     <meta name="author" content="devozy">
 
     <!--favicon icon-->
