--- a/IT Eng Team/agile_int_devops.html
+++ b/IT Eng Team/agile_int_devops.html
@@ -13,29 +13,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
-
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
-
-    <!--meta-->
-    <meta name="description"
-        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
+      <!--twitter og-->
+      <meta name="twitter:site" content="@DevozyAI">
+      <meta name="twitter:creator" content="@DevozyAI">
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:title" content="Agile Project Management Integrated with DevSecOps | Devozy.ai">
+      <meta name="twitter:description" content="Learn how Devozy.ai bridges Agile and DevSecOps to deliver faster, secure, and more collaborative software releases.">
+      <meta name="twitter:image" content="#">
+  
+      <!--facebook og-->
+      <meta property="og:url" content="#">
+      <meta property="og:title" content="Agile Project Management Integrated with DevSecOps | Devozy.ai">
+      <meta property="og:description" content="Explore how Devozy.ai unifies Agile and DevSecOps workflows through real-time sprint tracking, security checks, and seamless CI/CD.">
+      <meta property="og:image" content="#">
+      <meta property="og:image:secure_url" content="#">
+      <meta property="og:image:type" content="image/png">
+      <meta property="og:image:width" content="1200">
+      <meta property="og:image:height" content="630">
+  
+      <!--meta-->
+      <meta name="description" content="Devozy.ai integrates Agile project management with DevSecOps to streamline sprints, automate security, and boost engineering efficiency.">
+  
     <meta name="author" content="devozy">
 
     <!--favicon icon-->
