--- a/IT Eng Team/dedicated_cicd_tool.html
+++ b/IT Eng Team/dedicated_cicd_tool.html
@@ -13,29 +13,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+   <!--twitter og-->
+<meta name="twitter:site" content="@DevozyAI">
+<meta name="twitter:creator" content="@DevozyAI">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Dedicated CI/CD Tool for Qlik & Talend | Devozy.ai">
+<meta name="twitter:description" content="Ditch the workarounds. Devozy.ai offers a native CI/CD experience tailored for Qlik & Talend with simplified workflows and faster deployments.">
+<meta name="twitter:image" content="#">
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!--facebook og-->
+<meta property="og:url" content="#">
+<meta property="og:title" content="Dedicated CI/CD Tool for Qlik & Talend | Devozy.ai">
+<meta property="og:description" content="Why struggle with generic tools? Devozy.ai is built for Qlik & Talend users—automate deployments, manage environments, and save time.">
+<meta property="og:image" content="#">
+<meta property="og:image:secure_url" content="#">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
-    <!--meta-->
-    <meta name="description"
-        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
+<!--meta-->
+<meta name="description" content="Devozy.ai offers a dedicated CI/CD platform tailored for Qlik and Talend users, enabling seamless integration, environment cloning, and multi-cloud deployments.">
     <meta name="author" content="devozy">
 
     <!--favicon icon-->
