--- a/IT Eng Team/idp_market_research.html
+++ b/IT Eng Team/idp_market_research.html
@@ -13,36 +13,39 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+    <!-- Meta Tags for SEO & Social Sharing -->
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!-- Primary Meta -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Explore the Devozy.ai IDP Market Research insights. Discover industry trends in automation, DevSecOps, multi-cloud, and security—empowering IT teams with a unified platform.">
+<meta name="author" content="Devozy.ai">
 
-    <!--meta-->
-    <meta name="description"
-        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
-    <meta name="author" content="devozy">
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="IDP Market Research - Devozy.ai's Developer Platform Marketplace">
+<meta property="og:description" content="Devozy.ai identifies trends in IDP adoption—automation, multi-cloud support, and security. Discover how our unified DevSecOps platform addresses modern IT challenges.">
+<meta property="og:url" content="https://devozy.ai/IT%20Eng%20Team/idp_market_research.html">
+<meta property="og:image" content="https://devozy.ai/assets/img/social/idp-market-research-banner.jpg">
+<meta property="og:image:secure_url" content="https://devozy.ai/assets/img/social/idp-market-research-banner.jpg">
+<meta property="og:type" content="website">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@yozytechnologi1">
+<meta name="twitter:creator" content="@yozytechnologi1">
+<meta name="twitter:title" content="Devozy.ai's IDP Market Research Insights">
+<meta name="twitter:description" content="Discover Devozy.ai’s insights into IDP evolution: unified DevSecOps, automation, multi-cloud, and security all-in-one.">
+<meta name="twitter:image" content="https://devozy.ai/assets/img/social/idp-market-research-banner.jpg">
+
+        <meta name="author" content="devozy">
 
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Agile INT Dev</title>
+    <title>IDP Market Research - Devozy.ai's Developer Platform Marketplace</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
