--- a/IT Eng Team/savehours.html
+++ b/IT Eng Team/savehours.html
@@ -9,40 +9,40 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-W4RR424D');</script>
     <!-- End Google Tag Manager -->
-    <!--required meta tags-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Required Meta Tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+<!-- Primary Meta Tags -->
+<meta name="title" content="Save Hours on Qlik and Talend Deployments – Devozy.ai">
+<meta name="description" content="Discover how Devozy.ai helps IT teams automate deployments, manage environments, and track Qlik and Talend jobs in real time — saving hours every week.">
+<meta name="author" content="Devozy.ai">
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://devozy.ai/IT%20Eng%20Team/savehours.html">
+<meta property="og:title" content="Save Hours on Qlik and Talend Deployments – Devozy.ai">
+<meta property="og:description" content="Eliminate manual tasks in Qlik and Talend deployments. Use Devozy.ai to streamline CI/CD, reduce errors, and accelerate delivery with just one click.">
+<meta property="og:image" content="https://devozy.ai/assets/img/social/savehours-banner.jpg">
+<meta property="og:image:secure_url" content="https://devozy.ai/assets/img/social/savehours-banner.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
-    <!--meta-->
-    <meta name="description"
-        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
-    <meta name="author" content="devozy">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@yozytechnologi1">
+<meta name="twitter:creator" content="@yozytechnologi1">
+<meta name="twitter:title" content="Save Hours on Qlik and Talend Deployments – Devozy.ai">
+<meta name="twitter:description" content="Automate, deploy, and track Qlik & Talend jobs with Devozy.ai. Save hours and reduce risk with real-time visibility and templates.">
+<meta name="twitter:image" content="https://devozy.ai/assets/img/social/savehours-banner.jpg">
+
 
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Save Hours</title>
+    <title>Save Hours on Qlik and Talend Deployments – Devozy.ai</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
