--- a/IT Eng Team/value_adds_it.html
+++ b/IT Eng Team/value_adds_it.html
@@ -9,40 +9,40 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-W4RR424D');</script>
     <!-- End Google Tag Manager -->
-    <!--required meta tags-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- Required Meta Tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+<!-- Primary Meta Tags -->
+<meta name="title" content="How Devozy.ai Brings Value-Adds to IT Engineering Teams">
+<meta name="description" content="Discover how Devozy.ai helps IT engineering teams automate DevOps, reduce costs, improve collaboration, and scale securely across multi-cloud environments.">
+<meta name="author" content="Devozy.ai">
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://devozy.ai/IT%20Eng%20Team/value_adds_it.html">
+<meta property="og:title" content="How Devozy.ai Brings Value-Adds to IT Engineering Teams">
+<meta property="og:description" content="Explore Devozy.ai’s impact on DevOps automation, tool centralization, cost efficiency, scalability, and security for IT engineering teams.">
+<meta property="og:image" content="https://devozy.ai/assets/img/social/value-adds-banner.jpg">
+<meta property="og:image:secure_url" content="https://devozy.ai/assets/img/social/value-adds-banner.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
-    <!--meta-->
-    <meta name="description"
-        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
-    <meta name="author" content="devozy">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@yozytechnologi1">
+<meta name="twitter:creator" content="@yozytechnologi1">
+<meta name="twitter:title" content="How Devozy.ai Brings Value-Adds to IT Engineering Teams">
+<meta name="twitter:description" content="See how Devozy.ai helps IT teams automate tasks, manage projects, and collaborate effectively with real-time analytics and security integrations.">
+<meta name="twitter:image" content="https://devozy.ai/assets/img/social/value-adds-banner.jpg">
+
 
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Agile INT Dev</title>
+    <title>How Devozy.ai Brings Value-Adds to IT Engineering Teams</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
