--- a/Innovatie Integration/azure-integration.html
+++ b/Innovatie Integration/azure-integration.html
@@ -2,37 +2,41 @@
 <html lang="en" data-bs-theme="light">
 
 <head>
-    <!--required meta tags-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- Required Meta Tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+<!-- Primary Meta Tags -->
+<title>Azure Integration | Devozy.ai</title>
+<meta name="title" content="Azure Integration | Devozy.ai">
+<meta name="description" content="Effortlessly set up and manage Azure resources with Devozy.ai. Automate CI/CD pipelines using AKS, VMs, and Azure storage — no cloud expertise required.">
+<meta name="author" content="Devozy.ai">
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://devozy.ai/Innovatie%20Integration/azure-integration.html">
+<meta property="og:title" content="Azure Integration | Devozy.ai">
+<meta property="og:description" content="Simplify Azure onboarding and CI/CD automation with Devozy.ai. Launch AKS, ACS, VMs, and storage instantly with built-in security and DevSecOps.">
+<meta property="og:image" content="https://devozy.ai/assets/img/social/azure-integration-preview.jpg">
+<meta property="og:image:secure_url" content="https://devozy.ai/assets/img/social/azure-integration-preview.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
-    <!--meta-->
-    <meta name="description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="author" content="ThemeTags">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@yozytechnologi1">
+<meta name="twitter:creator" content="@yozytechnologi1">
+<meta name="twitter:title" content="Azure Integration | Devozy.ai">
+<meta name="twitter:description" content="Deploy applications faster on Azure using Devozy.ai. Automate pipelines, secure environments, and monitor resources — no DevOps needed.">
+<meta name="twitter:image" content="https://devozy.ai/assets/img/social/azure-integration-preview.jpg">
+
 
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Azure Integration</title>
+    <!-- <title>Azure Integration</title> -->
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
