--- a/Innovatie Integration/gcp-integration.html
+++ b/Innovatie Integration/gcp-integration.html
@@ -2,37 +2,41 @@
 <html lang="en" data-bs-theme="light">
 
 <head>
-    <!--required meta tags-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Required Meta Tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+<!-- Primary Meta Tags -->
+<title>Google Cloud Platform Integration | Devozy.ai</title>
+<meta name="title" content="Google Cloud Platform Integration | Devozy.ai">
+<meta name="description" content="Simplify GCP setup with Devozy.ai. Provision GKE, CodeBuild, and Compute Engine with just a few clicks — no DevOps skills needed.">
+<meta name="author" content="Devozy.ai">
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://devozy.ai/Innovatie%20Integration/gcp-integration.html">
+<meta property="og:title" content="Google Cloud Platform Integration | Devozy.ai">
+<meta property="og:description" content="Accelerate your Google Cloud adoption. Launch CI/CD pipelines, scale with GKE, and secure deployments with IAM — all in one platform.">
+<meta property="og:image" content="https://devozy.ai/assets/img/social/gcp-integration-preview.jpg">
+<meta property="og:image:secure_url" content="https://devozy.ai/assets/img/social/gcp-integration-preview.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
-    <!--meta-->
-    <meta name="description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="author" content="ThemeTags">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@yozytechnologi1">
+<meta name="twitter:creator" content="@yozytechnologi1">
+<meta name="twitter:title" content="Google Cloud Platform Integration | Devozy.ai">
+<meta name="twitter:description" content="Build and deploy with GCP faster. Devozy.ai enables code-to-cloud automation with GKE, Cloud Run, IAM, and BigQuery integration.">
+<meta name="twitter:image" content="https://devozy.ai/assets/img/social/gcp-integration-preview.jpg">
+
 
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>GCP Integration</title>
+    <!-- <title>GCP Integration</title> -->
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
