--- a/blog-single.html
+++ b/blog-single.html
@@ -2,31 +2,31 @@
 <html lang="en" data-bs-theme="light">
 
 <head>
-    <!--required meta tags-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- Meta Tags for SEO and Social Sharing -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+<!-- SEO -->
+<meta name="description" content="Explore how customer retention fuels long-term business growth and why it's more valuable than acquisition in today's competitive market.">
+<meta name="author" content="Elena Mou, Head of Designer">
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!-- Open Graph (Facebook, LinkedIn) -->
+<meta property="og:title" content="Why Customer Retention Is the Ultimate Growth Strategy">
+<meta property="og:description" content="Learn why focusing on customer retention drives sustainable growth, increases ROI, and builds loyal brand advocates.">
+<meta property="og:url" content="https://yourdomain.com/blog/customer-retention-growth-strategy">
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://yourdomain.com/assets/img/tab-feature-img-4.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
-    <!--meta-->
-    <meta name="description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="author" content="ThemeTags">
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@YourTwitterHandle">
+<meta name="twitter:creator" content="@ElenaMou">
+<meta name="twitter:title" content="Why Customer Retention Is the Ultimate Growth Strategy">
+<meta name="twitter:description" content="See how prioritizing retention can reduce churn, grow revenue, and create lasting customer relationships.">
+<meta name="twitter:image" content="https://yourdomain.com/assets/img/tab-feature-img-4.png">
+
 
     <!--favicon icon-->
     <link rel="icon" href="assets/img/favicon.png" type="image/png" sizes="16x16">
