--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="600">
+    
     <!--meta-->
     <meta name="description"
         content="Devozy.ai - a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms. Our platform facilitates everything from cloud resource provisioning (VMs, storage, container services) to build and deployment orchestration, scaling, containerization, and supporting cloud-native solutions.">
@@ -382,7 +383,7 @@
                                             <a target="_self" class="dropdown-item"
                                             href="Innovatie Integration/talend-qlik-integration.html">         
                                               <span class="me-2">
-                                                <img  style="height: 34px; width: 34px" src="Talendlogo.svg"></img>
+                                                <img  style="height: 38px; width:38px" src="qlik-talend-logo.svg"></img>
 
                                               </span>
                                               <div style="margin-left: 12px;">
