--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -2,66 +2,64 @@
 <html lang="en" data-bs-theme="light">
 
 <head>
-              <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-W4RR424D');</script>
-    <!-- End Google Tag Manager -->
-    <!-- Microsoft Clarity Tag Manager -->
-    <script type="text/javascript">
-        (function(c,l,a,r,i,t,y){
-            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "qkkwjv6yim");
-    </script>
-    <!-- End Microsoft Clarity Tag Manager -->
-        <!--Google reCaptcha v2-->
-    <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ5SBGF06Q"></script> -->
-    <!--required meta tags-->
+    <!-- Required Meta Tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
+  
+    <!-- SEO Meta -->
+    <meta name="description" content="Devozy.ai - Modern DevOps to DevEx SaaS platform. Simplify CI/CD, cloud automation, and developer self-service.">
+    <meta name="author" content="Yozy Technologies">
+  
+    <!-- Twitter Meta -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
-
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
+    <meta name="twitter:site" content="@yozytechnologies">
+    <meta name="twitter:creator" content="@yozytechnologies">
+    <meta name="twitter:title" content="Devozy.ai - Streamline DevOps, Empower Developers">
+    <meta name="twitter:description" content="Automate deployments, monitor clouds, and boost productivity with Devozy.ai.">
+    <meta name="twitter:image" content="https://devozy.ai/assets/og-image.png">
+  
+    <!-- Open Graph / Facebook Meta -->
+    <meta property="og:title" content="Devozy.ai - Streamline DevOps, Empower Developers">
+    <meta property="og:description" content="Automate deployments, monitor clouds, and boost productivity with Devozy.ai.">
+    <meta property="og:image" content="https://devozy.ai/assets/og-image.png">
+    <meta property="og:url" content="https://devozy.ai/">
+    <meta property="og:type" content="website">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="600">
-
-    <!--meta-->
-    <meta name="description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="author" content="ThemeTags">
-
-    <!--favicon icon-->
+  
+    <!-- Title -->
+    <title>Devozy.ai - Streamlined DevOps Automation & Developer Self-Service</title>
+  
+    <!-- Favicon -->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
-
-    <!--title-->
-    <title>Devops</title>
-
-    <!--build:css-->
+  
+    <!-- CSS Styles -->
     <link rel="stylesheet" href="../assets/css/main.css">
-    <!-- endbuild -->
-
-    <!--custom css start-->
     <link rel="stylesheet" href="../assets/css/custom.css">
-    <!--custom css end-->
-
-</head>
+  
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-W4RR424D');
+    </script>
+  
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "qkkwjv6yim");
+    </script>
+  
+    <!-- Optional: Google reCAPTCHA -->
+    <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
+  </head>
+  
 
 <body>
 
