--- a/product/agile-prog-mgmt.html
+++ b/product/agile-prog-mgmt.html
@@ -23,33 +23,33 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
+    <meta name="twitter:site" content="@DevozyAI">
+    <meta name="twitter:creator" content="@DevozyAI">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+    <meta name="twitter:title" content="Agile Project Management with DevOps & Kanban Board | Devozy.ai">
+    <meta name="twitter:description" content="Seamlessly manage tasks, sprints, and CI/CD workflows with Devozy.ai's built-in Agile Kanban board. Perfect for IT managers and engineering teams.">
+    <meta name="twitter:image" content="#"> <!-- Replace # with your image URL -->
+    
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
+    <meta property="og:url" content="#"> <!-- Replace # with your page URL -->
+    <meta property="og:title" content="Agile Project Management with DevOps & Kanban Board | Devozy.ai">
+    <meta property="og:description" content="Manage Agile workflows, DevOps pipelines, and infra visibility all from one powerful Kanban dashboard.">
+    <meta property="og:image" content="#"> <!-- Replace # with your image URL -->
+    <meta property="og:image:secure_url" content="#"> <!-- Same as above -->
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+    <meta property="og:image:height" content="630">
+    
 
     <!--meta-->
-    <meta name="description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="author" content="ThemeTags">
+    <meta name="description" content="Devozy.ai integrates Agile project management with DevOps and cloud infrastructure, enabling faster software delivery and greater team visibility.">
+
 
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Devops</title>
+    <title>Agile Project Management with DevOps & Kanban Board</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
