--- a/product/modernize-devops.html
+++ b/product/modernize-devops.html
@@ -24,17 +24,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
+    <meta name="twitter:site" content="@devozy">
+    <meta name="twitter:creator" content="@devozy">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
+    <meta name="twitter:title" content="Devozy.ai | a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms.">
+    <meta name="twitter:description"
+        content="Devozy.ai - a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms. Our platform facilitates everything from cloud resource provisioning (VMs, storage, container services) to build and deployment orchestration, scaling, containerization, and supporting cloud-native solutions.">
     <meta name="twitter:image" content="#">
 
     <!--facebook og-->
     <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
+    <meta name="twitter:title" content="Devozy.ai | a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms.">
+    <meta property="og:description"
+        content="Devozy.ai - a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms. Our platform facilitates everything from cloud resource provisioning (VMs, storage, container services) to build and deployment orchestration, scaling, containerization, and supporting cloud-native solutions.">
     <meta property="og:image" content="#">
     <meta property="og:image:secure_url" content="#">
     <meta property="og:image:type" content="image/png">
@@ -44,12 +46,10 @@
     <!--meta-->
     <meta name="description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
     <meta name="author" content="ThemeTags">
-
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
-    <!--title-->
-    <title>Devops</title>
+    <title>Modernize DevOps with Devozy.ai – From DevOps to DevEx</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
