--- a/product/talend-qlik.html
+++ b/product/talend-qlik.html
@@ -25,32 +25,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
+    <meta name="twitter:site" content="@devozy">
+    <meta name="twitter:creator" content="@devozy">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
+    <meta name="twitter:title" content="Devozy.ai | a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms.">
+    <meta name="twitter:description"
+        content="Devozy.ai - a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms. Our platform facilitates everything from cloud resource provisioning (VMs, storage, container services) to build and deployment orchestration, scaling, containerization, and supporting cloud-native solutions.">
     <meta name="twitter:image" content="#">
 
     <!--facebook og-->
     <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
+    <meta name="twitter:title" content="Devozy.ai | a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms.">
+    <meta property="og:description"
+        content="Devozy.ai - a developer self-service platform designed for IT engineering teams to efficiently ship software and applications to multi-cloud platforms. Our platform facilitates everything from cloud resource provisioning (VMs, storage, container services) to build and deployment orchestration, scaling, containerization, and supporting cloud-native solutions.">
     <meta property="og:image" content="#">
     <meta property="og:image:secure_url" content="#">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="600">
 
-    <!--meta-->
-    <meta name="description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="author" content="ThemeTags">
+<!-- General SEO meta -->
+<meta name="description" content="Devozy.ai helps Qlik Talend teams automate deployments, streamline CI/CD, and reduce DevOps overhead. Launch faster, cheaper, and with confidence.">
+<meta name="author" content="Yozy Technologies">
 
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Devops</title>
+    <title>Qlik Talend</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
@@ -602,13 +604,13 @@
                              </p>
                              <ul style="list-style: none; padding-left: 0;">
                                 <li><strong>⚡ Accelerate Qlik Talend Build & Deployments from Day 1</strong></li> 
-                                <li><strong>☁️ Talend On-Prem → Talend Cloud Migration</strong></li> 
-                                <li><strong>🔄 Talend Version Upgrade (7.3 → 8.0)</strong></li> 
+                                <li><strong>☁️ Qlik Talend On-Prem → Qlik Talend Cloud Migration</strong></li> 
+                                <li><strong>🔄 Qlik Talend Version Upgrade (7.3 → 8.0)</strong></li> 
                                 <li><strong>🌍 QTC (Qlik Talend Cloud) Region Changes</strong></li> 
-                                <li><strong>🛡️ Talend Jobs Vulnerability Scanning (Snyk) in Pipeline</strong></li> 
-                                <li><strong>🧪 Talend Automated Unit / Regression Testing in Pipeline</strong></li> 
-                                <li><strong>📊 Talend Jobs Code Quality (SonarQube) Scanning in Pipeline</strong></li> 
-                            </ul>                            
+                                <li><strong>🛡️ Qlik Talend Jobs Vulnerability Scanning (Snyk) in Pipeline</strong></li> 
+                                <li><strong>🧪 Qlik Talend Automated Unit / Regression Testing in Pipeline</strong></li> 
+                                <li><strong>📊 Qlik Talend Jobs Code Quality (SonarQube) Scanning in Pipeline</strong></li> 
+                            </ul>                             
                         </div>
                     </div>
                     <div class="bg-circle rounded-circle circle-shape-3 position-absolute bg-dark-light right-5"></div>
@@ -728,6 +730,7 @@
                     </div>
                 </section>
                 <!--feature section end-->
+                  
          <!--footer section start-->
          <footer class="footer-section">
             <!--footer top start-->
