--- a/thankyou.html
+++ b/thankyou.html
@@ -13,27 +13,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+ <!-- Twitter Card Meta -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@yozytechnologies"> <!-- Replace with your actual handle -->
+<meta name="twitter:creator" content="@yozytechnologies">
+<meta name="twitter:title" content="Devozy.ai – DevOps Automation & Self-Service for Developers">
+<meta name="twitter:description" content="Streamline your CI/CD, automate cloud deployments, and empower developers with Devozy.ai.">
+<meta name="twitter:image" content="https://devozy.ai/assets/img/social/devozy-preview.png"> <!-- Use real image path -->
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!-- Open Graph Meta for Facebook & LinkedIn -->
+<meta property="og:title" content="Devozy.ai – DevOps Automation & Developer Self-Service Platform">
+<meta property="og:description" content="From startups to enterprises, Devozy.ai helps automate DevOps, cloud management, and CI/CD pipelines.">
+<meta property="og:url" content="https://devozy.ai">
+<meta property="og:image" content="https://devozy.ai/assets/img/social/devozy-preview.png">
+<meta property="og:image:secure_url" content="https://devozy.ai/assets/img/social/devozy-preview.png">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:type" content="website">
 
-    <!--meta-->
-    <meta name="description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="author" content="ThemeTags">
+<!-- General Meta -->
+<meta name="description" content="Devozy.ai is a self-service DevOps platform enabling fast deployments, multi-cloud support, and developer productivity.">
+<meta name="author" content="Yozy Technologies">
+
 
     <!--favicon icon-->
     <link rel="icon" href="assets/img/favicon.png" type="image/png" sizes="16x16">
