--- a/IT Eng Team/dev_ssp_idp.html
+++ b/IT Eng Team/dev_ssp_idp.html
@@ -13,36 +13,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+   <!--twitter og-->
+<meta name="twitter:site" content="@DevozyAI">
+<meta name="twitter:creator" content="@DevozyAI">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Developer Self-Service Portal | Devozy.ai IDP for Agile DevSecOps">
+<meta name="twitter:description" content="Accelerate software delivery with Devozy.ai’s Developer Self-Service Portal. Provision environments, manage pipelines, and deploy across clouds with ease.">
+<meta name="twitter:image" content="https://devozy.ai/assets/img/social/dspp-banner.jpg">
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description"
-        content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!--facebook og-->
+<meta property="og:url" content="https://devozy.ai/IT%20Eng%20Team/agile_int_devops.html">
+<meta property="og:title" content="Devozy.ai IDP: Developer Self-Service Portal for Agile Teams">
+<meta property="og:description" content="Empower developers to provision infra, manage CI/CD pipelines, and monitor performance—all from a unified DevSecOps platform.">
+<meta property="og:image" content="https://devozy.ai/assets/img/social/dspp-banner.jpg">
+<meta property="og:image:secure_url" content="https://devozy.ai/assets/img/social/dspp-banner.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
-    <!--meta-->
-    <meta name="description"
-        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers IT engineering team and developers to accelerate software development through faster software delivery">
+<!--meta-->
+<meta name="description" content="Devozy.ai’s Developer Self-Service Portal empowers engineering teams to automate environment provisioning, manage pipelines, handle incidents, and scale across clouds—all from one dashboard.">
+
     <meta name="author" content="devozy">
 
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Agile INT Dev</title>
+    <title>Devozy.ai’s Developer Self-Service Portal </title>
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
