--- a/devozy.ai/qliktalend_devops.html
+++ b/devozy.ai/qliktalend_devops.html
@@ -2,47 +2,42 @@
 <html lang="en" data-bs-theme="light">
 
 <head>
-    <!--required meta tags-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Required Meta Tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+    <!-- Title -->
+    <title>Qlik Talend CI/CD Automation | Devozy.ai</title>
+    <meta name="title" content="Qlik Talend CI/CD Automation | Devozy.ai" />
+    <meta name="description" content="Revolutionize your Qlik Talend builds and deployments. Devozy.ai automates CI/CD pipelines, integrates with Jenkins, and simplifies Qlik Talend cloud orchestration." />
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://devozy.ai/Innovatie%20Integration/talend-qlik-integration.html" />
+    <meta property="og:title" content="Qlik Talend CI/CD Automation | Devozy.ai" />
+    <meta property="og:description" content="Empower Talend developers with pre-built pipelines, job orchestration, Nexus integration, and unified dashboards. No manual effort required!" />
+    <meta property="og:image" content="https://devozy.ai/assets/img/social/qlik-talend-dashboard-preview.jpg" />
+    <meta property="og:image:secure_url" content="https://devozy.ai/assets/img/social/qlik-talend-dashboard-preview.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
-    <!--meta-->
-    <meta name="description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="author" content="ThemeTags">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@yozytechnologi1" />
+    <meta name="twitter:creator" content="@yozytechnologi1" />
+    <meta name="twitter:title" content="Qlik Talend CI/CD Automation | Devozy.ai" />
+    <meta name="twitter:description" content="Streamline Qlik Talend builds with Jenkins, Nexus, and cloud orchestration using Devozy.ai’s automation-first platform." />
+    <meta name="twitter:image" content="https://devozy.ai/assets/img/social/qlik-talend-dashboard-preview.jpg" />
 
-    <!--favicon icon-->
-    <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
+    <!-- Favicon -->
+    <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16" />
 
-    <!--title-->
-    <title>Devops</title>
-
-    <!--build:css-->
-    <link rel="stylesheet" href="../assets/css/main.css">
-    <!-- endbuild -->
-
-    <!--custom css start-->
-    <link rel="stylesheet" href="../assets/css/custom.css">
-    <!--custom css end-->
-
+    <!-- CSS -->
+    <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="stylesheet" href="../assets/css/custom.css" />
 </head>
+
 
 <body>
 
