--- a/product/dessa.html
+++ b/product/dessa.html
@@ -23,33 +23,35 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--twitter og-->
-    <meta name="twitter:site" content="@themetags">
-    <meta name="twitter:creator" content="@themetags">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta name="twitter:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="twitter:image" content="#">
+   <!--twitter og-->
+<meta name="twitter:site" content="@devozy">
+<meta name="twitter:creator" content="@devozy">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="DeSSA – Your AI-Powered DevOps Assistant | Devozy.ai">
+<meta name="twitter:description" content="Meet DeSSA by Devozy.ai – an intelligent self-service assistant that streamlines development, automates tasks, and simplifies DevOps for your team.">
+<meta name="twitter:image" content="#">
 
-    <!--facebook og-->
-    <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Quiety - Creative SAAS Technology & IT Solutions Bootstrap 5 HTML Template">
-    <meta property="og:description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta property="og:image" content="#">
-    <meta property="og:image:secure_url" content="#">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+<!--facebook og-->
+<meta property="og:type" content="website">
+<meta property="og:url" content="#">
+<meta property="og:title" content="DeSSA – Your AI-Powered DevOps Assistant | Devozy.ai">
+<meta property="og:description" content="DeSSA transforms software delivery by offering 24/7 support, step-by-step guidance, and seamless automation. Explore it now with free multi-cloud setup.">
+<meta property="og:image" content="#">
+<meta property="og:image:secure_url" content="#">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
-    <!--meta-->
-    <meta name="description" content="Quiety creative Saas, software technology, Saas agency & business Bootstrap 5 Html template. It is best and famous software company and Saas website template.">
-    <meta name="author" content="ThemeTags">
+<!--meta-->
+<meta name="description" content="DeSSA by Devozy.ai is a smart, AI-powered assistant designed to enhance developer experience. Automate, guide, and deploy faster—without the DevOps hassle.">
+<meta name="author" content="Yozy Technologies">
+
 
     <!--favicon icon-->
     <link rel="icon" href="../assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Devops</title>
+    <title>DeSSA</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="../assets/css/main.css">
