--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
                                 <a href="#home" class="nav-link" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">Home</a>         
                             </li> -->
-                            <!-- <li><a href="#Pricing" class="nav-link">Product</a></li> -->
+                            <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li>
+                             
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
                                 <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
@@ -534,6 +535,7 @@
                                 aria-expanded="false">Home</a>         
                         </li> -->
                         <!-- <li><a href="#Pricing" class="nav-link">Product</a></li> -->
+                        <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
                             <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
